syntax = "proto3";
package sunrise.liquiditypool.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sunriselayer/sunrise/x/liquiditypool/types";

// EventCreatePool
message EventCreatePool {
  uint64 pool_id = 1;
  string denom_base = 2;
  string denom_quote = 3;
  string fee_rate = 4;
  string price_ratio = 5;
  string base_offset = 6;
}

// EventCreatePosition
message EventCreatePosition {
  uint64 position_id = 1;
  string address = 2;
  uint64 pool_id = 3;
  int64 lower_tick = 4;
  int64 upper_tick = 5;
  string liquidity = 6;
}

// EventIncreaseLiquidity
message EventIncreaseLiquidity {
  uint64 old_position_id = 1;
  uint64 new_position_id = 2;
  string address = 3;
  string amount_base = 4;
  string amount_quote = 5;
}

// EventDecreaseLiquidity
message EventDecreaseLiquidity {
  uint64 position_id = 1;
  string address = 2;
  string amount_base = 3;
  string amount_quote = 4;
}

// EventClaimRewards
message EventClaimRewards {
  string address = 1;
  uint64 position_id = 2;
  repeated cosmos.base.v1beta1.Coin rewards = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

// EventSwapExactAmountIn
message EventSwapExactAmountIn {
  string address = 1;
  uint64 pool_id = 2;
  cosmos.base.v1beta1.Coin token_in = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin token_out = 4 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  bool fee_enabled = 5;
}

// EventSwapExactAmountOut
message EventSwapExactAmountOut {
  string address = 1;
  uint64 pool_id = 2;
  cosmos.base.v1beta1.Coin token_in = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin token_out = 4 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  bool fee_enabled = 5;
}
